--- a/docs/tutorial/Cargo.toml
+++ b/docs/tutorial/Cargo.toml
@@ -12,6 +12,7 @@ substreams-ethereum = "0.8.0"
 prost = "0.11"
 substreams-database-change = "1.0.0"
 anyhow = "1"
+hex = "0.4"
 prost-types = "0.11"
 chrono = { version = "0.4", features = [ "std" ], default-features = false }
 
