--- a/docs/tutorial/substreams.yaml
+++ b/docs/tutorial/substreams.yaml
@@ -1,6 +1,6 @@
 specVersion: v0.1.0
 package:
-  name: 'substreams_postgresql_sink_tutorial'
+  name: "substreams_postgresql_sink_tutorial"
   version: v0.1.0
 
 protobuf:
@@ -25,10 +25,19 @@ modules:
     inputs:
       - source: sf.ethereum.type.v2.Block
 
+  - name: store_transaction_data
+    kind: store
+    updatePolicy: set_if_not_exists
+    valueType: proto:eth.block_meta.v1.Transaction
+    inputs:
+      - source: sf.ethereum.type.v2.Block
+
   - name: db_out
     kind: map
     inputs:
       - store: store_block_meta_start
+        mode: deltas
+      - store: store_transaction_data
         mode: deltas
     output:
       type: proto:sf.substreams.sink.database.v1.DatabaseChanges
