--- a/docs/tutorial/Cargo.toml
+++ b/docs/tutorial/Cargo.toml
@@ -10,8 +10,10 @@ crate-type = ["cdylib"]
 substreams = "0.5.0"
 substreams-ethereum = "0.8.0"
 prost = "0.11"
-substreams-database-change = "1.0.0"
+substreams-database-change = "1.2.0"
+substreams-entity-change = {git = "https://github.com/streamingfast/substreams-entity-change/", branch = "develop"}
 anyhow = "1"
+base64 = "0.13.0"
 hex = "0.4"
 prost-types = "0.11"
 chrono = { version = "0.4", features = [ "std" ], default-features = false }
