--- a/docs/tutorial/Cargo.toml
+++ b/docs/tutorial/Cargo.toml
@@ -15,6 +15,7 @@ substreams-entity-change = {git = "https://github.com/streamingfast/substreams-e
 anyhow = "1"
 base64 = "0.13.0"
 hex = "0.4"
+log = "0.4.14"
 prost-types = "0.11"
 chrono = { version = "0.4", features = [ "std" ], default-features = false }
 
