--- a/docs/tutorial/substreams.yaml
+++ b/docs/tutorial/substreams.yaml
@@ -9,8 +9,8 @@ protobuf:
   importPaths:
     - ./proto
 
-# imports:
-#   database_change: https://github.com/streamingfast/substreams-database-change/releases/download/v0.1.0/substreams-database-change-v0.1.0.spkg
+imports:
+  database_change: https://github.com/streamingfast/substreams-sink-database-changes/releases/download/v1.2.0/substreams-database-change-v1.2.0.spkg
 
 binaries:
   default:
